--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,27 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v1
+        with:
+          fetch-depth: 0 # 如果lastUpdated未启用，则不需要
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: yarn # or pnpm / yarn
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Install dependencies
+        run: yarn ci # or pnpm install / yarn install / bun install
+      - name: Build with VitePress
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          yarn docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build 
+          touch docs/.vitepress/dist/.nojekyll
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: docs/.vitepress/dist
+
+      
